osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_disallowed_binary_operators/test_rejects_pow_operator.txt
error: the `**` operator is not supported
--> main.sml:1:6
     |
   1 | Foo = 2 ** 8
     |       ^ exponentiation and bit-shift operators can build very large numbers in a single step, which can stall rule evaluation